vcs/specs/parser/fail/declarations/missing_type_body.vr
// @test: parse-fail
// @level: L0
// @tags: parser, declarations, type, error
// @description: Test missing type body detection
// @expected-error: E045

type Point is;

type Option<T> is;

type Empty is ;
